feat(obfuscator): add zig compilation